# eigenfaces

./: main.py  pyproject.toml
